# kdrive

./: .gitlab-ci.yml  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  meson.build  meson_options.txt  xorg-server.pc  xserver.ent
.gitlab-ci/: check-ddx-build.sh  cross-prereqs-build.sh  debian-install.sh
Xext/: Makefile  Makefile.in  bigreq.lo  dpms.lo  dpmsstubs.lo  geext.lo  hashtable.lo  libXext.la  libXextdpmsstubs.la  libXvidmode.la  meson.build  panoramiX.lo  panoramiXSwap.lo  panoramiXprocs.lo  saver.c  saver.lo  shape.lo  shm.c  shm.lo  sleepuntil.lo  sync.c  sync.lo  vidmode.lo  xace.c  xace.h  xace.lo  xcmisc.lo  xres.c  xres.lo  xselinux_ext.c  xtest.lo  xvdisp.c  xvdisp.lo  xvmain.lo  xvmc.lo
Xi/: Makefile  Makefile.in  allowev.lo  chgdctl.lo  chgfctl.lo  chgkbd.lo  chgkmap.lo  chgprop.lo  chgptr.lo  closedev.lo  devbell.lo  exevents.c  exevents.lo  extinit.lo  getbmap.lo  getdctl.lo  getfctl.lo  getfocus.lo  getkmap.lo  getmmap.lo  getprop.lo  getselev.lo  getvers.lo  grabdev.lo  grabdevb.lo  grabdevk.lo  gtmotion.lo  libXi.la  libXistubs.la  listdev.lo  opendev.lo  queryst.lo  selectev.lo  sendexev.lo  setbmap.lo  setdval.lo  setfocus.lo  setmmap.lo  setmode.lo  stubs.lo  (+23 more)
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
composite/: Makefile  Makefile.in  compalloc.c  compalloc.lo  compext.c  compext.lo  compinit.c  compinit.lo  compoverlay.lo  compwindow.c  compwindow.lo  libcomposite.la
config/: Makefile  Makefile.in  config-backends.h  config.lo  libconfig.la  udev.c
damageext/: Makefile  Makefile.in  damageext.lo  libdamageext.la
dbe/: Makefile  Makefile.in  dbe.c  dbe.lo  dbestruct.h  libdbe.la  midbe.lo
dix/: Makefile  Makefile.in  atom.lo  closestr.h  colormap.c  colormap.lo  cursor.c  cursor.lo  devices.c  devices.lo  dispatch.c  dispatch.lo  dixfonts.c  dixfonts.lo  dixutils.lo  enterleave.lo  eventconvert.c  eventconvert.lo  events.c  events.lo  extension.lo  ffs.lo  gc.lo  gestures.c  globals.lo  (+25 more)
test/bugs/: bug1881.c  meson.build
(+1498 files in other folders)
